--- a/src/blocks/address/index.pug
+++ b/src/blocks/address/index.pug
@@ -1,5 +1,5 @@
 .address
-  .address-title Контакты
+  .address__title Контакты
   ul.address__contacts
     li.address__contacts-item
       svg(xmlns="http://www.w3.org/2000/svg" width="11" height="14" viewBox="0 0 11 14")
