--- a/src/blocks/form-short/index.pug
+++ b/src/blocks/form-short/index.pug
@@ -1,14 +1,15 @@
 form.form-short.js-hidden-captcha(action="", type="post")
-  .form-short__item
-    label.field-text.field-text--transparent.form-short__field
-      span.field-text__input-wrap
-        input.field-text__input.js-moving-placeholder(type="text", placeholder="Ваше имя")
-    label.field-text.field-text--transparent.form-short__field
-      span.field-text__input-wrap
-        input.field-text__input.js-moving-placeholder(type="tel", placeholder="Ваш телефон")
+  label.field-text.field-text--transparent.form-short__field
+    span.field-text__input-wrap
+      input.field-text__input.js-moving-placeholder(type="text", placeholder="Ваше имя")
+  label.field-text.field-text--transparent.form-short__field
+    span.field-text__input-wrap
+      input.field-text__input.js-moving-placeholder(type="tel", placeholder="Ваш телефон")
   label.field-checkbox.form-short__field
     span.field-checkbox__input-wrap
       input.field-checkbox__input(type='checkbox')
-      span.field-checkbox__help-text Нажимая на кнопку я соглашаюсь с <a href="#">политикой конфидициальности</a>
-  div.form-short__field.-ta-sm
-    div.button.button--primary-darken.js-hidden-button Оставить заявку
+      span.field-checkbox__name
+      span.field-checkbox__help-text
+        | Нажимая на кнопку я соглашаюсь с <a href="#">политикой конфиденциальности</a>
+  div.form-short__field.-ta-c--sm
+    div.button.button--primary-dark.js-hidden-button Оставить заявку
