--- a/src/blocks/main-slider/index.pug
+++ b/src/blocks/main-slider/index.pug
@@ -2,7 +2,7 @@
   .main-slider__item
     .page-container.main-slider__item-inner
       .main-slider__info
-        .main-slider__desc Premium Product
-        h1.main-slider__title Продвижение сайтов
+        .main-slider__label Premium Product
+        h1 Продвижение сайтов
       .main-slider__form
           include ../form-short/index
