--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -10,27 +10,27 @@ block content
 
   .wide-block.wide-block--gray-lighter
     .page-container
-      h2.-ta-sm 
+      h2.-ta-c--sm 
         | Наши услуги
       include ../../blocks/services/index
   .wide-block.wide-block--primary-light
-    .page-container__form
+    .page-container.page-container--narrow
       h2
         | Продвижение на особых условиях 
         p.-c-primary за заявку, отправленную прямо здесь и сейчас
       include ../../blocks/form/index
-  .wide-block.-half-padding-bottom
+  .wide-block.wide-block--half-padding-bottom
     .page-container
       h2.-ta-c
         | Тарифы
       include ../../blocks/table-compare/index
-  .wide-block.-half-padding-top.wide-block--cases-fon
+  .wide-block.wide-block--half-padding-top.wide-block--double-padding-bottom.wide-block--cases-fon
     .page-container
-      h2.-ta-sm
+      h2.-ta-c--sm
         | Наши кейсы
-      include ../../blocks/our-cases/index
+      include ../../blocks/cases/index
   .wide-block.wide-block--gradient
     .page-container
-      h2.-ta-sm
+      h2.-ta-c--sm
         | Наши преимущества
-      include ../../blocks/our-advantages/index
+      include ../../blocks/advantages/index
