--- a/src/pug/pages/portfolio-detail.pug
+++ b/src/pug/pages/portfolio-detail.pug
@@ -7,35 +7,31 @@ block meta
 block content
   .wide-block.-no-padding-top
     .page-container
-      h1.h2.-no-tt Официальный магазин архитектурного декора NMC Бельгия
-      .portfolio-detail
-        .portfolio-detail__info
-          .portfolio-detail__desc
-            .portfolio-detail__desc-item
-              .portfolio-detail__desc-title Задача
-              .portfolio-detail__desc-text
-                | Увеличить поток заявок на кадастровые услуги из интернета
-            .portfolio-detail__desc-item
-              .portfolio-detail__desc-title Что сделано
-              .portfolio-detail__desc-text
-                ol
-                  li Подготовлена digital-стратегия продвижения
-                  li Разработан сайт-каталог с индивидуальным дизайном
-                  li Настроены цели, подключена веб-аналитика
-                  li Выполнена SEO-оптимизация и раскрутка сайта
-                  li Проведена работа с отзывами и репутацией
-          .portfolio-detail__img
-            img(src="../../blocks/portfolio-detail/images/device.png")
-            
+      h1.h2 Официальный магазин архитектурного декора NMC Бельгия
+      .portfolio-info
+        .portfolio-info__desc
+          .portfolio-info__desc-item
+            h3 Задача
+            p
+              | Увеличить поток заявок на кадастровые услуги из интернета
+          .portfolio-info__desc-item
+            h3 Что сделано
+            ol.list
+              li Подготовлена digital-стратегия продвижения
+              li Разработан сайт-каталог с индивидуальным дизайном
+              li Настроены цели, подключена веб-аналитика
+              li Выполнена SEO-оптимизация и раскрутка сайта
+              li Проведена работа с отзывами и репутацией
+        .portfolio-info__img
+            img(src="../../blocks/portfolio-detail/images/device.png")       
   .wide-block.wide-block--gradient
     .page-container
       h2.h3 Особенности проекта
-      .portfolio-detail
-        ul.portfolio-detail__list
-          li При разработке структуры придерживались принципа «один блок = одна мысль»
-          li Использовали единый визуальный слой
-          li Расставили формы захвата везде, где посетитель близко подходит к принятию решения
-          li Заложили основы для продвижения личного бренда основателя
+      ul.list__arrow
+        li При разработке структуры придерживались принципа «один блок = одна мысль»
+        li Использовали единый визуальный слой
+        li Расставили формы захвата везде, где посетитель близко подходит к принятию решения
+        li Заложили основы для продвижения личного бренда основателя
   .wide-block
 
 
