--- a/src/pug/pages/portfolio.pug
+++ b/src/pug/pages/portfolio.pug
@@ -7,5 +7,5 @@ block meta
 block content
   .wide-block.-no-padding-top
     .page-container
-      h1.h2.-no-tt Примеры наших проектов
+      h1.h2 Примеры наших проектов
       include ../../blocks/portfolio/index
