--- a/src/blocks/address/style.scss
+++ b/src/blocks/address/style.scss
@@ -1,8 +1,7 @@
 .address { 
-  &-title {
+  &__title {
     color: var(--color-mint);
     font-size: var(--font-size--medium);
-    font-weight: 500;
     line-height: 1.5;
     text-align: center;
     margin-bottom: .5em;
@@ -17,7 +16,6 @@
     &-item {
       white-space: nowrap;
       margin: 0 0 .5em;
-      font-weight: 300;
 
       &:last-child {
         margin-bottom: 0;
@@ -40,8 +38,9 @@
       width: auto;
     }
 	}
+  
   @media (min-width: $screen-md) {
-    &-title {
+    &__title {
       text-align: left;
     }
   }
