--- a/src/blocks/cases/index.pug
+++ b/src/blocks/cases/index.pug
@@ -1,14 +1,14 @@
-.our-cases
-  .our-cases__text
+.cases
+  .cases__text
     p Собственные методы продвижения запросов в ТОП 10 за месяц!
     p Учитываем актуальные на сегодня внутренние и внешние факторы ранжирования сайта для получения топовых позиций в Яндекс и Google за минимальное время
     p В первую очередь: продвигаем до результата высокочастотные и прибыльные для Вашего бизнеса ключевые слова, чтобы Ваш сайт, приносил как можно больше заявок от клиентов с помощью СЕО трафика
     p Продвигаем сайты по приемлемой цене в Москве и в других регионах.
-  .our-cases__case
+  .cases__case
     .case-slider(data-flickity-options='{ "cellAlign": "left", "prevNextButtons": true, "groupCells": false, "lazyLoad": true }')
-      .our-cases__slide
+      .cases__slide
         include ../../blocks/table/index
-      .our-cases__slide
+      .cases__slide
         include ../../blocks/table/index
       
         
