--- a/src/blocks/form/style.scss
+++ b/src/blocks/form/style.scss
@@ -22,25 +22,10 @@
 			}
 
       & + & {
-        margin-top: 33px;
+        margin-top: 2em;
       }
 		}
 	}
-
-  &__item {
-    margin-bottom: 18px;
-
-    @media (min-width: $screen-lg) {
-      .form__field {
-        margin-top: 0;
-        margin-bottom: 18px;
-
-        &:last-child {
-          margin-bottom: 0;
-        }
-      }
-    }
-  }
 
   .field-text {
     color: var(--color-gray--dark);
@@ -61,25 +46,47 @@
       display: block;
       font-size: var(--font-size--large);
       color: var(--color-black);
-      line-height: 1.35;
+      line-height: var(--line-height);
+      font-weight: 500;
     }
 
     &__form-input {
       background: var(--color-white);
       border: 1px solid var(--color-white);
       font-size: var(--font-size);
-      padding: 1em 0 1em 1em;
+      padding: 1em;
       outline: none;
+      width: 100%;
+
+      @media (min-width: $screen-md) {
+        &--size-bg {
+          width: 80%;
+        }
+
+        &--size-sm {
+          width: 47%;
+        }
+      }
+
+      @media (min-width: $screen-lg) {
+        &--size-bg {
+          width: 82%;
+        }
+
+        &--size-sm {
+          width: 51%;
+        }
+      }
     }
 
     @media (min-width: $screen-md) {
       &__input--margin-bg {
-        margin-right: 2.75em;
+        margin-right: 1.25em;
         margin-bottom: 0;
       }
 
       &__input--margin-sm {
-        margin-right: 2.15em;
+        margin-right: .4em;
         margin-bottom: 0;
       }
       
@@ -91,55 +98,8 @@
     
     @media (min-width: $screen-lg) {
       &__input--margin-sm {
-        margin-right: 2.25em;
+        margin-right: 1.25em;
       }
     }
-  }
-
-  .field-checkbox {
-    &__input-wrap {
-      display: flex;
-      align-items: center;
-    }
-    
-    &__input {
-      position: absolute;
-      width: 1px;
-      height: 1px;
-    }
-  
-    &__help-text {
-      font-size: var(--font-size--tiny);
-      color: var(--color-black);
-      font-weight: 400;
-      line-height: 1.25;
-      margin-left: 30px;
-      position: relative;
-      width: 42%;
-      & a {
-        color: inherit;
-      }
-  
-      &::before {
-        content: "";
-        position: absolute;
-        top: 5px;
-        left: -30px;
-        width: 20px;
-        height: 20px;
-        background-image: url(../../blocks/form-short/images/checkbox-no-active.png);
-        background-repeat: no-repeat;
-        background-position: center center;
-        background-size: 20px;
-      }
-
-      @media (min-width: $screen-md) {
-        width: 27%;
-      }
-    }
-  }
-  
-  .field-checkbox__input:checked ~ .field-checkbox__help-text::before {
-    background-image: url(../../blocks/form-short/images/checkbox-active.jpg);
   }
 }
