--- a/src/blocks/main-menu/style.scss
+++ b/src/blocks/main-menu/style.scss
@@ -50,9 +50,15 @@
 		}
 
 		&__list {
+			padding: 0 0.75em 0.75em;
 
+      &--lvl2 { 
+				font-size: var(--font-size--medium);
+			}
+			
 			&--lvl3 {
 				padding: .5em 1.5em .75em 3em;
+				font-size: var(--font-size--medium);
 			}
 		}
 
@@ -60,7 +66,7 @@
 			position: relative;
 
 			&--lvl1 {
-				border-bottom: 1px solid var(--color-gray);
+				border-bottom: 1px solid var(--color-gray--lighten);
         
 				&:last-child {
           border-bottom: none;
@@ -100,7 +106,6 @@
 		}
 
 		&__link {
-
 			&--lvl1 {
 				padding: .5em 0 .75em 1.5em;
 
@@ -122,7 +127,7 @@
 		}
 	}
 
-	@media (min-width: $screen-md) {
+	@media (min-width: $screen-md - 1) {
 		&__submenu {
 
 			&--lvl1 {
