--- a/src/blocks/page-container/style.scss
+++ b/src/blocks/page-container/style.scss
@@ -6,29 +6,13 @@
 	padding-right: var(--grid-gutter);
 	position: relative;
 	width: 100%;
+
+	&--narrow {
+		max-width: 840px;
+	}
 }
 
 .page__breadcrumb {
 	padding-top: 1.5em;
 	padding-bottom: 1em;
-}
-
-.page-container__form {
-	margin-left: auto;
-	margin-right: auto;
-	max-width: 840px;
-	padding-left: var(--grid-gutter);
-	padding-right: var(--grid-gutter);
-	position: relative;
-	width: 100%;
-}
-
-.page-container__article {
-	margin-left: auto;
-	margin-right: auto;
-	max-width: 792px;
-	padding-left: var(--grid-gutter);
-	padding-right: var(--grid-gutter);
-	position: relative;
-	width: 100%;
 }
