--- a/src/blocks/page-header/index.pug
+++ b/src/blocks/page-header/index.pug
@@ -12,10 +12,11 @@ mixin page-header(mods)
       .page-header__phones
         include ../phones/index
       .page-header__order
-        button.button.button--not-fill.button--small
-          <svg class="svg-icon" width="12" height="12"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-chat"></use></svg>
-        button.button.button--not-fill.button--large Консультация
-    .page-header__inner--hr
+        button.button.button--not-fill.button_size_sm
+          svg(xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 12 12")
+            path(d="M6 0C2.68396 0 0 2.6835 0 6C0 7.0524 0.274475 8.08026 0.795685 8.98682L0.0226135 11.3875C-0.031311 11.5549 0.0130005 11.7383 0.137329 11.8627C0.260468 11.9858 0.443481 12.0318 0.612488 11.9774L3.01318 11.2043C3.91974 11.7255 4.9476 12 6 12C9.31604 12 12 9.3165 12 6C12 2.68396 9.3165 0 6 0ZM6 11.0625C5.04941 11.0625 4.1228 10.7973 3.32034 10.2955C3.2049 10.2233 3.06152 10.2038 2.92813 10.2468L1.19513 10.8049L1.75323 9.07187C1.79553 8.9404 1.77768 8.79684 1.70444 8.67966C1.20273 7.8772 0.9375 6.95059 0.9375 6C0.9375 3.20856 3.20856 0.9375 6 0.9375C8.79144 0.9375 11.0625 3.20856 11.0625 6C11.0625 8.79144 8.79144 11.0625 6 11.0625ZM6.58594 6C6.58594 6.32355 6.32364 6.58594 6 6.58594C5.67636 6.58594 5.41406 6.32355 5.41406 6C5.41406 5.67636 5.67636 5.41406 6 5.41406C6.32364 5.41406 6.58594 5.67636 6.58594 6ZM8.92969 6C8.92969 6.32355 8.66739 6.58594 8.34375 6.58594C8.02011 6.58594 7.75781 6.32355 7.75781 6C7.75781 5.67636 8.02011 5.41406 8.34375 5.41406C8.66739 5.41406 8.92969 5.67636 8.92969 6ZM4.24219 6C4.24219 6.32355 3.97989 6.58594 3.65625 6.58594C3.3327 6.58594 3.07031 6.32355 3.07031 6C3.07031 5.67636 3.3327 5.41406 3.65625 5.41406C3.97989 5.41406 4.24219 5.67636 4.24219 6Z")
+        button.button.button--not-fill.button_size_lg Консультация
+    .page-header__inner-border
     .page-container.page-header__inner-bottom
       .page-header__logo
         picture
@@ -25,4 +26,3 @@ mixin page-header(mods)
         include ../header-search/index
       .page-header__burger
         include ../header-burger/index
-    .page-header__inner--sw
