--- a/src/blocks/portfolio-detail/style.scss
+++ b/src/blocks/portfolio-detail/style.scss
@@ -1,9 +1,6 @@
-.portfolio-detail {
-
-  &__info {
-    display: block;
-  }
-
+.portfolio-info {
+  display: block;
+  
   &__desc {
     width: 100%;
     margin-bottom: 6.25em;
@@ -15,31 +12,6 @@
 
       &:last-child {
         margin-bottom: 0;
-      }
-    }
-
-    &-title {
-      font-size: var(--font-size-h3);
-      font-weight: 500;
-      line-height: 1.35;
-      margin-bottom: .75em;
-    }
-
-    &-text {
-      font-size: var(--font-size);
-      font-weight: 300;
-      line-height: 1.35;
-
-      & ol {
-        padding-left: 1.625em;
-
-        & li {
-          margin-bottom: .5em;
-
-          &:last-child {
-            margin-bottom: 0;
-          }
-        }
       }
     }
   }
@@ -55,35 +27,6 @@
       height: 226px;
       bottom: 0;
       z-index: 9;
-    }
-  }
-
-  &__list {
-    list-style: none;
-		margin: 0;
-		padding: 0;
-
-    & li {
-      font-size: var(--font-size);
-      font-weight: 300;
-      line-height: 1.35;
-      margin-bottom: .75em;
-
-      &:last-child {
-        margin-bottom: 0;
-      }
-
-      &:before {
-        content: "";
-        display: inline-block;
-				background-image: url('../../blocks/portfolio-detail/images/arrow.png');
-				background-repeat: no-repeat;
-				background-position: center center;
-				width: 20px;
-				height: 15px;
-				vertical-align: middle;
-				margin-right: .75em;
-      }
     }
   }
 
@@ -103,12 +46,9 @@
   }
 
   @media (min-width: $screen-lg) {
-
-    &__info {
-      display: flex;
-      align-items: flex-end;
-      justify-content: space-between;
-    }
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-between;
 
     &__desc {
       flex: 1 0 25%;
