--- a/src/blocks/portfolio/style.scss
+++ b/src/blocks/portfolio/style.scss
@@ -10,12 +10,23 @@
 		margin-bottom: var(--blocks-margin-vertical);
 	}
 
+  &__link {
+    text-decoration: none;
+    color: var(--color-white);
+
+    &:hover,
+    &:active {
+      color: var(--color-white);
+    }
+  }
+
   &__item {
     border-radius: .625em;
     display: none;
-    width: 100%;
+    width: calc(90% - var(--grid-gutter) / 2);
     min-height: 100%;
     margin: 0 auto 20px;
+    transition: var(--transition-time);
 
     &:nth-child(1),
     &:nth-child(2),
@@ -32,11 +43,9 @@
   }
 
   &__img {
-    width: 100%;
-    height: auto;
     & img {
-      width: 100%;
-      height: 272px;
+      max-width: 100%;
+      height: auto;
       border-top-right-radius: 12px;
       border-top-left-radius: 12px;
     }
@@ -45,40 +54,41 @@
   &__title {
     font-size: var(--font-size--vast);
 		font-weight: 500;
-		line-height: 1.35;
+		line-height: var(--line-height);
 		margin-top: -10px;
 		padding: 1em .75em .75em;
-    background-color: var(--color-primary--darken);
     border-bottom-right-radius: 12px;
     border-bottom-left-radius: 12px;
+    background-color: var(--color-primary--darken);
+    max-width: 374px;
 
     &:hover,
 		&:active {
+      color: var(--color-white);
       background-color: var(--color-mint);
-      color: var(--color-white);
     }
   }
 
-  &__link {
-    text-decoration: none;
-    color: var(--color-white);
+  @media (min-width: $screen-sm - 1) {
 
-    &:hover,
-		&:active {
-      color: var(--color-white);
-    }
-  }
+		&__item {
+			width: calc(50% - var(--grid-gutter) / 2);
+      margin-right: auto;
+      margin-left: auto;
+		}
+	}
 
   @media (min-width: $screen-sm) {
 
 		&__item {
-			margin-right: var(--grid-gutter);
 			width: calc(50% - var(--grid-gutter) / 2);
+      margin-right: auto;
+      margin-left: auto;
 		}
 	}
 
-  @media (min-width: $screen-lg) {
-		display: grid;
+  @media (min-width: $screen-md) {
+    display: grid;
 		gap: calc(var(--grid-gutter) * 8/3) calc(var(--grid-gutter) * 8/3);
 		grid-template-columns: 1fr 1fr;
 
@@ -86,9 +96,10 @@
 			margin: 0;
 			width: auto;
 		}
-	}
+  }
 
-  @media (min-width: $screen-xl) {
-			grid-template-columns: 1fr 1fr 1fr;
+  @media (min-width: $screen-lg) {
+    gap: calc(var(--grid-gutter) * 8/3) calc(var(--grid-gutter) * 5/3);
+		grid-template-columns: 1fr 1fr 1fr;
 	}
 }
