--- a/src/blocks/services/index.pug
+++ b/src/blocks/services/index.pug
@@ -16,7 +16,7 @@
 			"image": "assets/seo-audit.png"
 		}
 	]
-.tile-slider.services(data-flickity-options='{ "cellAlign": "left", "prevNextButtons": false, "groupCells": true, "watchCSS": true, "lazyLoad": true }')
+.tile-slider.services(data-flickity-options='{ "cellAlign": "left", "prevNextButtons": false, "groupCells": true, "initialIndex": "1", "watchCSS": true, "lazyLoad": true }')
 	each item, i in dataServices
 		.services__item
 			.services__title !{item.title}
