--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -1,11 +1,11 @@
 @font-face {
     font-family: 'Gotham Pro';
-    src: url('../fonts/GothamPro.eot');
+    src: url('../fonts/GothamProRegular.eot');
     src: local('Gotham Pro Regular'), local('GothamPro'),
         url('../fonts/GothamProRegular.eot?#iefix') format('embedded-opentype'),
         url('../fonts/GothamProRegular.woff') format('woff'),
         url('../fonts/GothamProRegular.ttf') format('truetype');
-    font-weight: 300;
+    font-weight: 400;
     font-style: normal;
 	font-display: swap;
 }
@@ -32,6 +32,6 @@
         url('../fonts/GothamPro-Bold.woff2') format('woff2'),
         url('../fonts/GothamPro-Bold.ttf') format('truetype');
     font-weight: 700;
-    font-style: bold;
+    font-style: normal;
 	font-display: swap;
 }
