--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -29,10 +29,10 @@
 @import '../blocks/h-scroll/style';
 @import '../blocks/table-compare/style';
 @import '../blocks/table/style';
-@import '../blocks/our-cases/style';
+@import '../blocks/cases/style';
 @import '../blocks/case-slider/style';
-@import '../blocks/our-advantages/style';
+@import '../blocks/advantages/style';
 @import '../blocks/breadcrumb/style';
 @import '../blocks/portfolio/style';
-@import '../blocks/article-detail/style';
 @import '../blocks/portfolio-detail/style';
+@import '../blocks/field-checkbox/style';
