--- a/src/blocks/advantages/index.pug
+++ b/src/blocks/advantages/index.pug
@@ -34,7 +34,9 @@
 
 .advantages
   .advantages__logo
-    <svg class="svg-icon" width="126" height="123"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-logo"></use></svg>
+    svg(xmlns="http://www.w3.org/2000/svg" width="126" height="123" viewBox="0 0 126 123")
+          path(d="M60,11A11,11,0,0,1,71,0h55V53a11,11,0,0,1-11,11H60Z" fill="#2992D0")
+          path(d="M60,70h45a8,8,0,0,1,8,8v45H68a8,8,0,0,1-8-8Zm-7,0H8a8,8,0,0,0-8,8v45H45a8,8,0,0,0,8-8Zm0-6H8a8,8,0,0,1-8-8V11H45a8,8,0,0,1,8,8Z" fill="#A1D7E0")
   ul.circle
     li.advantages__item.circle__item
       .advantages__icon
