--- a/src/blocks/main-menu/style.scss
+++ b/src/blocks/main-menu/style.scss
@@ -162,6 +162,13 @@
 					margin-left: .375em;
 					max-height: 7px;
 					max-width: 12px;
+					background-color: transparent;
+			    background-image: url("data:image/svg+xml;charset=utf-8,<svg width='12' height='8' viewBox='0 0 12 8' xmlns='http://www.w3.org/2000/svg'><path fill-rule='evenodd' clip-rule='evenodd' d='M10.59 0.590027L6 5.17003L1.41 0.590027L0 2.00003L6 8.00003L12 2.00003L10.59 0.590027Z' fill='rgb(0, 89, 153)'/></svg>");
+			    background-position: 50% 50%;
+			    background-repeat: no-repeat;
+			    cursor: pointer;
+			    outline: none;
+			    padding: 0;
 				}
 			}
 
