--- a/src/blocks/page-footer/index.pug
+++ b/src/blocks/page-footer/index.pug
@@ -11,7 +11,7 @@ mixin page-footer(mods)
     .page-footer__top
       .page-container.page-footer__top-inner
         .page-footer__top-item.page-footer__top-item--logo
-          img(src="images/logo.png")
+          img(src="images/logo.svg", width="123", height="35" alt="")
         .page-footer__top-item.page-footer__top-item--menu
           include ../footer-menu/index
         .page-footer__top-item.page-footer__top-item--contacts
