--- a/src/blocks/page-header/index.pug
+++ b/src/blocks/page-header/index.pug
@@ -20,7 +20,7 @@ mixin page-header(mods)
     .page-container.page-header__inner-bottom
       .page-header__logo
         picture
-          img(src="images/logo.png", width="123", height="35" alt="")
+          img(src="images/logo.svg", width="123", height="35" alt="")
       +page-nav('page__nav')
       .page-header__search
         include ../header-search/index
