--- a/src/blocks/portfolio-detail/style.scss
+++ b/src/blocks/portfolio-detail/style.scss
@@ -68,7 +68,7 @@
 
       &:after {
         content: '';
-        background-image: url('../../blocks/portfolio-detail/images/fon.png');
+        background-image: url("data:image/svg+xml;charset=utf-8,<svg width='362' height='361' viewBox='0 0 362 361' xmlns='http://www.w3.org/2000/svg'><path fill-rule='evenodd' clip-rule='evenodd' d='M207.14,0H362V154.4A31.65,31.65,0,0,1,330.32,186H175.5V31.55A31.61,31.61,0,0,1,207.14,0ZM175.5,206.2H310a20.75,20.75,0,0,1,20.77,20.72V361H196.23a20.72,20.72,0,0,1-20.73-20.67V206.2ZM0,31.19H134.45a20.76,20.76,0,0,1,20.78,20.72V186H20.73A20.72,20.72,0,0,1,0,165.32Zm155.23,175V340.28A20.76,20.76,0,0,1,134.45,361H0V226.88A20.72,20.72,0,0,1,20.73,206.2Z' fill='rgb(161, 215, 224)'/></svg>");
         background-repeat: no-repeat;
         background-position: center center;
         background-size: 318px;
