--- a/src/pug/layout.pug
+++ b/src/pug/layout.pug
@@ -14,7 +14,7 @@ html(class="page" lang="en")
 
     link(rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png")
     link(rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png")
-    meta(name="msapplication-TileColor" content="#da532c")
+    meta(name="msapplication-TileColor" content="#2992d0")
     meta(name="theme-color" content="#ffffff")
 
     link(href="css/libs.min.css" rel="stylesheet" type="text/css")
