--- a/src/blocks/form-short/index.pug
+++ b/src/blocks/form-short/index.pug
@@ -11,5 +11,5 @@ form.form-short.js-hidden-captcha(action="", type="post")
       span.field-checkbox__name
       span.field-checkbox__help-text
         | Нажимая на кнопку я соглашаюсь с <a href="#">политикой конфиденциальности</a>
-  div.form-short__field.-ta-c--sm
+  div.form-short__field--btn.-ta-c--sm
     div.button.button--primary-dark.js-hidden-button Оставить заявку
