--- a/src/blocks/button/style.scss
+++ b/src/blocks/button/style.scss
@@ -54,6 +54,7 @@
 		&:active {
 			background-color: var(--color-mint);
 	    border: 1px solid var(--color-mint);
+			transition: .3s;
 		}
 	}
 
@@ -63,6 +64,7 @@
 		&:hover,
 		&:active {
 			@include button--primary;
+			transition: .3s;
 		}
 	}
 
@@ -73,6 +75,7 @@
 		&:hover,
 		&:active {
 			@include button--primary;
+			transition: .3s;
 		}
 	}
   
@@ -84,6 +87,7 @@
 		&:hover,
 		&:active {
 			@include button--primary;
+			transition: .3s;
 		}
 	}
 
