--- a/src/blocks/tile-slider/style.scss
+++ b/src/blocks/tile-slider/style.scss
@@ -34,28 +34,7 @@
 	}
 
 	& .flickity-page-dots {
-		align-items: center;
-		bottom: 0;
-		display: flex;
-		height: 1.5em;
-		justify-content: center;
-		justify-items: center;
-		padding: 0 2.5em;
-		position: absolute;
-		transform: translateY(50%);
-		z-index: 5;
-
-		& .dot {
-			background-color: var(--color-gray--dark);
-			border-radius: 2px;
-			height: 3px;
-			opacity: .35;
-			width: 45px;
-
-			&.is-selected {
-				opacity: .75;
-			}
-		}
+		display: none;
 	}
 
 	&:not(.is-draggable) .flickity-prev-next-button,
