--- a/src/blocks/cases/index.pug
+++ b/src/blocks/cases/index.pug
@@ -5,7 +5,7 @@
     p В первую очередь: продвигаем до результата высокочастотные и прибыльные для Вашего бизнеса ключевые слова, чтобы Ваш сайт, приносил как можно больше заявок от клиентов с помощью СЕО трафика
     p Продвигаем сайты по приемлемой цене в Москве и в других регионах.
   .cases__case
-    .case-slider(data-flickity-options='{ "cellAlign": "left", "prevNextButtons": true, "groupCells": false, "lazyLoad": true }')
+    .case-slider(data-flickity-options='{ "draggable": false, "cellAlign": "left", "prevNextButtons": true, "groupCells": false, "lazyLoad": true }')
       .cases__slide
         include ../../blocks/table/index
       .cases__slide
