--- a/src/scss/_modifiers.scss
+++ b/src/scss/_modifiers.scss
@@ -21,6 +21,7 @@
 .-fs-large { font-size: var(--font-size--large) }
 
 .-no-margin { margin: 0; }
+.-no-margin-top { margin-top: 0 !important; }
 .-no-padding { padding: 0; }
 .-no-padding-bottom { padding-bottom: 0 !important; }
 .-no-padding-top { padding-top: 0 !important; }
