--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -36,3 +36,10 @@
 @import '../blocks/portfolio/style';
 @import '../blocks/portfolio-detail/style';
 @import '../blocks/field-checkbox/style';
+@import '../blocks/reviews/style';
+@import '../blocks/reviews-detal/style';
+@import '../blocks/company-slider/style';
+@import '../blocks/clients-slider/style';
+@import '../blocks/vacancies-advantages/style';
+@import '../blocks/vacancies/style';
+@import '../blocks/team/style';
