--- a/src/blocks/case-slider/style.scss
+++ b/src/blocks/case-slider/style.scss
@@ -31,6 +31,7 @@
 		&.previous {
 			right: 0;
 			left: 27%;
+			top: 92px;
 			transform: translateX(50%);
 
 			@media (max-width: $screen-md) {
@@ -44,19 +45,22 @@
 			}
 
 			@media (min-width: $screen-md) {
-			  left: 90%;
+			  left: 86%;
+				top: 102px;
 			}
 
 			@media (min-width: $screen-lg) {
-			  left: 91%;
+			  left: 87%;
+				top: 112px;
 			}
 
 			@media (min-width: $screen-xl) {
-			  left: 87%;
+			  left: 82%;
+				top: 152px;
 			}
 		}
 		&.next {
-			left: 42%;
+			left: 50%;
 			transform: translateX(50%);
 
 			@media (max-width: $screen-md) {
@@ -104,7 +108,10 @@
     display: none;
 	}
 
-	&:not(.is-draggable) .flickity-prev-next-button,
+	&:not(.is-draggable) .flickity-prev-next-button {
+		display: block;
+	}
+
 	&:not(.is-draggable) .flickity-page-dots {
 		display: none;
 	}
