--- a/src/blocks/page/style.scss
+++ b/src/blocks/page/style.scss
@@ -64,7 +64,7 @@ h1, .h1 {
   font-size: var(--font-size-h1);
   font-weight: 500;
   line-height: 1.05;
-	margin: 0 0 .75em 0;
+	margin: 0 0 .5em 0;
 }
 
 h2, .h2 {
@@ -80,7 +80,7 @@ h3, .h3 {
   font-weight: 500;
   line-height: 1.2;
   padding: 0;
-	margin: 0 0 .75em 0;
+	margin: .75em 0;
 }
 
 a {
