--- a/src/blocks/services/style.scss
+++ b/src/blocks/services/style.scss
@@ -12,6 +12,7 @@
 		transition: var(--transition-time);
 		width: calc(70% - var(--grid-gutter) / 2);
 		margin-right: 1.5em;
+		text-decoration: none;
 
 		@media (max-width: $screen-md) {
 			&:nth-child(1) {
